deploy: 08cba5c545ab0ce29eb534d61b8f126640bc523d

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-database sd-text-warning"></span> Data Management</div>
-<p class="sd-card-text">Tools to help with structuring project folders and transfering data between computers.</p>
+<p class="sd-card-text">Tools to help with structuring project folders and transferring data between computers.</p>
 </div>
 <a class="sd-stretched-link reference internal" href="projects/data_management.html"><span class="doc"></span></a></div>
 </div>
