deploy: 16e58e8274a6edbff2b09f187991feaa7b946cf9

--- a/projects/data_management.html
+++ b/projects/data_management.html
@@ -338,14 +338,30 @@ data between computing systems during data collection and analysis.</p>
 This standardisation makes data-sharing and collaboration much simpler, and allows sharing of analysis tools that can operate on predictable folder structures.</p>
 <p>Read the specification on the website, or discuss and contribute and GitHub.</p>
 <div class="sd-container-fluid sd-sphinx-override sd-mb-4 docutils">
-<div class="sd-row sd-row-cols-2 sd-row-cols-xs-2 sd-row-cols-sm-2 sd-row-cols-md-2 sd-row-cols-lg-2 docutils">
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://swc-bids.neuroinformatics.dev"><span>Website   <span class="fa fa-globe"></span></span></a></p>
-</div>
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://github.com/neuroinformatics-unit/SWC-BIDS"><span>GitHub   <span class="fab fa-github"></span></span></a></p>
-</div>
-</div>
+    <div class="sd-row sd-row-cols-2 sd-row-cols-xs-2 sd-row-cols-sm-2 sd-row-cols-md-2 sd-row-cols-lg-2 docutils">
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://swc-bids.neuroinformatics.dev" target="_blank">
+                    <span>
+                        Website   
+                        <span class="fa fa-globe">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://github.com/neuroinformatics-unit/SWC-BIDS" target="_blank">
+                    <span>
+                        GitHub   
+                        <span class="fab fa-github">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+    </div>
 </div>
 </section>
 <section id="datashuttle">
@@ -359,14 +375,30 @@ all data to with a centrally stored project.</p></li>
 <li><p>Easily manage data transfers for processing and analysis by selecting only a sub-set of data to move (e.g. specific subjects, sessions or data types).</p></li>
 </ul>
 <div class="sd-container-fluid sd-sphinx-override sd-mb-4 docutils">
-<div class="sd-row sd-row-cols-2 sd-row-cols-xs-2 sd-row-cols-sm-2 sd-row-cols-md-2 sd-row-cols-lg-2 docutils">
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://datashuttle.neuroinformatics.dev"><span>Website   <span class="fa fa-globe"></span></span></a></p>
-</div>
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://github.com/neuroinformatics-unit/datashuttle"><span>GitHub   <span class="fab fa-github"></span></span></a></p>
-</div>
-</div>
+    <div class="sd-row sd-row-cols-2 sd-row-cols-xs-2 sd-row-cols-sm-2 sd-row-cols-md-2 sd-row-cols-lg-2 docutils">
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://datashuttle.neuroinformatics.dev" target="_blank">
+                    <span>
+                        Website   
+                        <span class="fa fa-globe">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://github.com/neuroinformatics-unit/datashuttle" target="_blank">
+                    <span>
+                        GitHub   
+                        <span class="fab fa-github">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+    </div>
 </div>
 </section>
 </section>
