--- a/projects/neuroanatomy.html
+++ b/projects/neuroanatomy.html
@@ -339,23 +339,63 @@
 <li><p>Build a community of neuroscientists and developers to share knowledge, build software and engage with the scientific, and open-source community (e.g. by organising hackathons).</p></li>
 </ul>
 <div class="sd-container-fluid sd-sphinx-override sd-mb-4 docutils">
-<div class="sd-row sd-row-cols-5 sd-row-cols-xs-5 sd-row-cols-sm-5 sd-row-cols-md-5 sd-row-cols-lg-5 docutils">
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://brainglobe.info/"><span>Website   <span class="fa fa-globe"></span></span></a></p>
-</div>
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://github.com/brainglobe"><span>GitHub   <span class="fab fa-github"></span></span></a></p>
-</div>
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://docs.brainglobe.info/"><span>Documentation   <span class="fa fa-book-open"></span></span></a></p>
-</div>
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://forum.image.sc/tag/brainglobe"><span>Help Forum   <span class="fa fa-messages"></span></span></a></p>
-</div>
-<div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
-<p class="sd-text-left"><a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://brainglobe.info/publications"><span>Publications   <span class="fa fa-newspaper"></span></span></a></p>
-</div>
-</div>
+    <div class="sd-row sd-row-cols-2 sd-row-cols-xs-2 sd-row-cols-sm-2 sd-row-cols-md-2 sd-row-cols-lg-2 docutils">
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://brainglobe.info/" target="_blank">
+                    <span>
+                        Website   
+                        <span class="fa fa-globe">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://github.com/brainglobe" target="_blank">
+                    <span>
+                        GitHub   
+                        <span class="fab fa-github">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://docs.brainglobe.info/" target="_blank">
+                    <span>
+                        Documentation   
+                        <span class="fa fa-book-open">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://forum.image.sc/tag/brainglobe" target="_blank">
+                    <span>
+                        Help Forum   
+                        <span class="fa fa-comment">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+        <div class="sd-col sd-d-flex-column sd-col-auto sd-col-xs-auto sd-col-sm-auto sd-col-md-auto sd-col-lg-auto docutils">
+            <p class="sd-text-left">
+                <a class="sd-sphinx-override sd-btn sd-text-wrap sd-btn-primary sd-shadow-sm reference external" href="https://brainglobe.info/publications" target="_blank">
+                    <span>
+                        Pubblications   
+                        <span class="fa fa-newspaper">
+                        </span>
+                    </span>
+                </a>
+            </p>
+        </div>
+    </div>
 </div>
 </section>
 </section>
