--- a/index.html
+++ b/index.html
@@ -437,31 +437,33 @@
   <footer class="bd-footer"><div class="bd-footer__inner container">
   
   <div class="footer-item">
-    
-<p class="copyright">
-
-    &copy; Copyright 2022, Neuroinformatics Unit.<br>
-
-</p>
-
-  </div>
-  
-  <div class="footer-item">
-    <p class="theme-version">
-    Built with the
-    <a href="https://pydata-sphinx-theme.readthedocs.io/en/stable/index.html">
-        PyData Sphinx Theme
-    </a>
-    0.12.0.
-</p>
-  </div>
-  
-  <div class="footer-item">
-    
-<p class="sphinx-version">
-Created using <a href="http://sphinx-doc.org/">Sphinx</a> 5.3.0.<br>
-</p>
-
+    <div class="things-in-a-row">
+    <div class="col">
+        <p class="sphinx-version">
+        Created using <a href="https://sphinx-doc.org/">Sphinx</a> 5.3.0.
+        <br/>
+        </p>
+        <p class="theme-version">
+        Built with the
+        <a href="https://pydata-sphinx-theme.readthedocs.io/en/stable/index.html">PyData Sphinx Theme</a>
+        0.12.0.
+        </p>
+    </div>
+    <div class="things-in-a-row">
+        <a href="https://www.sainsburywellcome.org/web/">
+            <img src="_static/light-logo-swc.png" alt="Sponsors" class="only-light img-sponsor"/>
+            <img src="_static/dark-logo-swc.png" alt="Sponsors" class="only-dark img-sponsor"/>
+        </a>
+        <a href="https://www.ucl.ac.uk/">
+            <img src="_static/light-logo-gatsby.png" alt="Sponsors" class="only-light img-sponsor"/>
+            <img src="_static/dark-logo-gatsby.png" alt="Sponsors" class="only-dark img-sponsor"/>
+        </a>
+        <a href="https://www.ucl.ac.uk/gatsby/gatsby-computational-neuroscience-unit">
+            <img src="_static/light-logo-ucl.png" alt="Sponsors" class="only-light img-sponsor"/>
+            <img src="_static/dark-logo-ucl.png" alt="Sponsors" class="only-dark img-sponsor"/>
+        </a>
+    </div>
+</div>
   </div>
   
 </div>
