deploy: bef71bd3363894590f0d738cf34e1922cf6651df

--- a/search.html
+++ b/search.html
@@ -40,6 +40,13 @@
     <script src="_static/sphinx_highlight.js"></script>
     <script src="_static/design-tabs.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
+    <script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-6260TGM7TY"></script>
+    <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){ dataLayer.push(arguments); }
+                gtag('js', new Date());
+                gtag('config', 'G-6260TGM7TY');
+            </script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'search';</script>
 <script src="_static/searchtools.js"></script>
 <script src="_static/language_data.js"></script>
