--- a/projects/neuroanatomy.html
+++ b/projects/neuroanatomy.html
@@ -42,6 +42,13 @@
     <script src="../_static/sphinx_highlight.js"></script>
     <script src="../_static/design-tabs.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
+    <script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-6260TGM7TY"></script>
+    <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){ dataLayer.push(arguments); }
+                gtag('js', new Date());
+                gtag('config', 'G-6260TGM7TY');
+            </script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'projects/neuroanatomy';</script>
     <link rel="canonical" href="https://neuroinformatics.dev/projects/neuroanatomy.html" />
     <link rel="shortcut icon" href="../_static/logo_light.png"/>
