deploy: 035956a23e6226d17faa3ef0953d2ecfd7d664c5

--- a/people.html
+++ b/people.html
@@ -434,6 +434,16 @@ Laura Porta</div>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/lauraporta"></a></div>
 </div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<img alt="" class="sd-card-img-top" src="_images/chang_huan_lo.png" />
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
+Chang Huan Lo</div>
+<p class="sd-card-text">Research Software Engineer</p>
+</div>
+<a class="sd-stretched-link reference external" href="https://github.com/lochhh"></a></div>
+</div>
 </div>
 </div>
 </section>
