--- a/people.html
+++ b/people.html
@@ -444,6 +444,16 @@ Chang Huan Lo</div>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/lochhh"></a></div>
 </div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<img alt="" class="sd-card-img-top" src="_images/alessandro_felder.png" />
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
+Alessandro Felder</div>
+<p class="sd-card-text">Research Software Engineer</p>
+</div>
+<a class="sd-stretched-link reference external" href="https://github.com/alessandrofelder"></a></div>
+</div>
 </div>
 </div>
 </section>
