--- a/index.html
+++ b/index.html
@@ -429,18 +429,34 @@ document.write(`
 <img alt="" class="sd-card-img-top" src="_images/neuroanatomy_card.png" />
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
-<span class="fas fa-brain sd-text-danger"></span> Neuroanatomy</div>
-<p class="sd-card-text">Tools for analysing neuroanatomical data.</p>
+<span class="fas fa-brain sd-text-primary"></span> Neuroanatomy</div>
 </div>
 <a class="sd-stretched-link reference internal" href="projects/neuroanatomy.html"><span class="doc"></span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
-<img alt="" class="sd-card-img-top" src="_images/SWC-BIDS_card.png" />
+<img alt="" class="sd-card-img-top" src="_images/behaviour_card.png" />
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
-<span class="fas fa-database sd-text-warning"></span> Data Management</div>
-<p class="sd-card-text">Tools to help with structuring project folders and transferring data between computers.</p>
+<span class="fas fa-video sd-text-primary"></span> Behaviour</div>
+</div>
+<a class="sd-stretched-link reference internal" href="projects/behaviour.html"><span class="doc"></span></a></div>
+</div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<img alt="" class="sd-card-img-top" src="_images/electrophysiology_card.png" />
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
+<span class="fas fa-bolt sd-text-primary"></span> Electrophysiology</div>
+</div>
+<a class="sd-stretched-link reference internal" href="projects/electrophysiology.html"><span class="doc"></span></a></div>
+</div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<img alt="" class="sd-card-img-top" src="_images/data-management_card.png" />
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
+<span class="fas fa-database sd-text-primary"></span> Data Management</div>
 </div>
 <a class="sd-stretched-link reference internal" href="projects/data_management.html"><span class="doc"></span></a></div>
 </div>
@@ -450,7 +466,6 @@ document.write(`
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-code sd-text-primary"></span> Developer Tools</div>
-<p class="sd-card-text">Tools to help with software development.</p>
 </div>
 <a class="sd-stretched-link reference internal" href="projects/developer_tools.html"><span class="doc"></span></a></div>
 </div>
