deploy: 13149926266c0b247649d51aa3670fe5b7aa56f8

--- a/blog.html
+++ b/blog.html
@@ -184,7 +184,7 @@
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -323,7 +323,7 @@ document.write(`
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
