--- a/genindex.html
+++ b/genindex.html
@@ -173,7 +173,7 @@
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -312,7 +312,7 @@ document.write(`
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
