--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -322,7 +322,7 @@ document.write(`
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -431,7 +431,7 @@ document.write(`
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-brain sd-text-primary"></span> Neuroanatomy</div>
 </div>
-<a class="sd-stretched-link reference internal" href="projects/neuroanatomy.html"><span class="doc"></span></a></div>
+<a class="sd-stretched-link reference internal" href="projects.html#projects-neuroanatomy"><span class="std std-ref"></span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
@@ -440,7 +440,7 @@ document.write(`
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-video sd-text-primary"></span> Behaviour</div>
 </div>
-<a class="sd-stretched-link reference internal" href="projects/behaviour.html"><span class="doc"></span></a></div>
+<a class="sd-stretched-link reference internal" href="projects.html#projects-behaviour"><span class="std std-ref"></span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
@@ -449,7 +449,7 @@ document.write(`
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-bolt sd-text-primary"></span> Electrophysiology</div>
 </div>
-<a class="sd-stretched-link reference internal" href="projects/electrophysiology.html"><span class="doc"></span></a></div>
+<a class="sd-stretched-link reference internal" href="projects.html#projects-electrophysiology"><span class="std std-ref"></span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
@@ -458,7 +458,7 @@ document.write(`
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-database sd-text-primary"></span> Data Management</div>
 </div>
-<a class="sd-stretched-link reference internal" href="projects/data_management.html"><span class="doc"></span></a></div>
+<a class="sd-stretched-link reference internal" href="projects.html#projects-data-management"><span class="std std-ref"></span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
@@ -467,7 +467,7 @@ document.write(`
 <div class="sd-card-title sd-font-weight-bold docutils">
 <span class="fas fa-code sd-text-primary"></span> Developer Tools</div>
 </div>
-<a class="sd-stretched-link reference internal" href="projects/developer_tools.html"><span class="doc"></span></a></div>
+<a class="sd-stretched-link reference internal" href="projects.html#projects-developer-tools"><span class="std std-ref"></span></a></div>
 </div>
 </div>
 </div>
