--- a/people.html
+++ b/people.html
@@ -61,7 +61,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Projects" href="projects/index.html" />
+    <link rel="next" title="Projects" href="projects.html" />
     <link rel="prev" title="About us" href="about.html" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -180,7 +180,7 @@
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -323,7 +323,7 @@ document.write(`
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -546,7 +546,7 @@ Igor Tatarnikov</div>
       </div>
     </a>
     <a class="right-next"
-       href="projects/index.html"
+       href="projects.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
