--- a/search.html
+++ b/search.html
@@ -179,7 +179,7 @@
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
@@ -318,7 +318,7 @@ document.write(`
                 
 
                     <li class="nav-item">
-                      <a class="nav-link nav-internal" href="projects/index.html">
+                      <a class="nav-link nav-internal" href="projects.html">
                         Projects
                       </a>
                     </li>
