--- a/people.html
+++ b/people.html
@@ -556,6 +556,16 @@ Igor Tatarnikov</div>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/IgorTatarnikov"></a></div>
 </div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<img alt="" class="sd-card-img-top" src="_images/sofia_minano.png" />
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
+Sofía Miñano</div>
+<p class="sd-card-text">Research Software Engineer</p>
+</div>
+<a class="sd-stretched-link reference external" href="https://github.com/sfmig"></a></div>
+</div>
 </div>
 </div>
 </section>
