deploy: b9984907e954b118d7fd38b8b730874fc92291e6

--- a/people.html
+++ b/people.html
@@ -515,7 +515,7 @@ Adam Tyson</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Joe Ziminski</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/JoeZiminski"></a></div>
 </div>
@@ -525,7 +525,7 @@ Joe Ziminski</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Niko Sirmpilatze</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/niksirbi"></a></div>
 </div>
@@ -535,7 +535,7 @@ Niko Sirmpilatze</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Laura Porta</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/lauraporta"></a></div>
 </div>
@@ -545,7 +545,7 @@ Laura Porta</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Chang Huan Lo</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/lochhh"></a></div>
 </div>
@@ -555,7 +555,7 @@ Chang Huan Lo</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Alessandro Felder</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/alessandrofelder"></a></div>
 </div>
@@ -565,7 +565,7 @@ Alessandro Felder</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Igor Tatarnikov</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/IgorTatarnikov"></a></div>
 </div>
@@ -575,7 +575,7 @@ Igor Tatarnikov</div>
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
 Sofía Miñano</div>
-<p class="sd-card-text">Research Software Engineer</p>
+<p class="sd-card-text">Senior Research Software Engineer</p>
 </div>
 <a class="sd-stretched-link reference external" href="https://github.com/sfmig"></a></div>
 </div>
