--- a/genindex.html
+++ b/genindex.html
@@ -196,6 +196,13 @@
                 <ul id="pst-nav-more-links" class="dropdown-menu">
                     
 <li class="nav-item ">
+  <a class="nav-link dropdown-item nav-internal" href="roadmaps/index.html">
+    Roadmaps
+  </a>
+</li>
+
+
+<li class="nav-item ">
   <a class="nav-link dropdown-item nav-internal" href="get-involved/index.html">
     Get involved
   </a>
@@ -388,6 +395,13 @@ document.write(`
 <li class="nav-item pst-header-nav-item">
   <a class="nav-link nav-internal" href="blog/index.html">
     Blog
+  </a>
+</li>
+
+
+<li class="nav-item pst-header-nav-item">
+  <a class="nav-link nav-internal" href="roadmaps/index.html">
+    Roadmaps
   </a>
 </li>
 
