--- a/get-involved/index.html
+++ b/get-involved/index.html
@@ -62,7 +62,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="General development guidelines" href="development_guidelines.html" />
-    <link rel="prev" title="Blog" href="../blog/index.html" />
+    <link rel="prev" title="June 2024" href="../roadmaps/june-2024.html" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -202,6 +202,13 @@
                 </button>
                 <ul id="pst-nav-more-links" class="dropdown-menu">
                     
+<li class="nav-item ">
+  <a class="nav-link dropdown-item nav-internal" href="../roadmaps/index.html">
+    Roadmaps
+  </a>
+</li>
+
+
 <li class="nav-item  current active">
   <a class="nav-link dropdown-item nav-internal" href="#">
     Get involved
@@ -401,6 +408,13 @@ document.write(`
 </li>
 
 
+<li class="nav-item pst-header-nav-item">
+  <a class="nav-link nav-internal" href="../roadmaps/index.html">
+    Roadmaps
+  </a>
+</li>
+
+
 <li class="nav-item pst-header-nav-item current active">
   <a class="nav-link nav-internal" href="#">
     Get involved
@@ -591,12 +605,12 @@ We are also happy to guide new contributors through the process. For more detail
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../blog/index.html"
+       href="../roadmaps/june-2024.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Blog</p>
+        <p class="prev-next-title">June 2024</p>
       </div>
     </a>
     <a class="right-next"
