deploy: 73d615a431ee01a936b8acb781de4d9ada890107

--- a/projects.html
+++ b/projects.html
@@ -608,7 +608,7 @@ process extracellular electrophysiology data from multiple subjects and sessions
 <p class="sd-card-text">SpikeWrap is built upon SpikeInterface, abstracting away the implementation details to allow researchers to easily
 test different pipeline configurations.</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference external" href="https://github.com/neuroinformatics-unit/spikewrap"><span>https://github.com/neuroinformatics-unit/spikewrap</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://spikewrap.neuroinformatics.dev"><span>https://spikewrap.neuroinformatics.dev</span></a></div>
 </div>
 </div>
 </div>
