deploy: 704f03d0741938188ab83732e29cb8c488511ad5

--- a/resources.html
+++ b/resources.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="_static/sphinx-design.min.css?v=95c83b7e" />
     <link rel="stylesheet" type="text/css" href="_static/css/custom.css?v=56311cd7" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
   
   <!-- So that users can add custom icons -->
   <script src="_static/scripts/fontawesome.js?digest=8878045cc6db502f8baf"></script>
@@ -64,7 +65,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="prev" title="Mentored open-source contributions" href="get-involved/mentoring.html" /> 
+    <link rel="prev" title="GSoC NIU Contributor Application Guidelines" href="get-involved/gsoc/guidelines.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />   
@@ -585,12 +586,12 @@ HowTo’s</div>
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="get-involved/mentoring.html"
+       href="get-involved/gsoc/guidelines.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Mentored open-source contributions</p>
+        <p class="prev-next-title">GSoC NIU Contributor Application Guidelines</p>
       </div>
     </a>
 </div>
