--- a/get-involved/mentoring.html
+++ b/get-involved/mentoring.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-design.min.css?v=95c83b7e" />
     <link rel="stylesheet" type="text/css" href="../_static/css/custom.css?v=56311cd7" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
   
   <!-- So that users can add custom icons -->
   <script src="../_static/scripts/fontawesome.js?digest=8878045cc6db502f8baf"></script>
@@ -64,7 +65,7 @@
     <link rel="author" title="About these documents" href="../about.html" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Resources" href="../resources.html" />
+    <link rel="next" title="Google Summer of Code" href="gsoc/index.html" />
     <link rel="prev" title="Development guidelines for specific languages and frameworks" href="languages_frameworks.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -598,11 +599,11 @@ or by <a href="mailto:adam.tyson@ucl.ac.uk?subject=Mentored open-source contribu
       </div>
     </a>
     <a class="right-next"
-       href="../resources.html"
+       href="gsoc/index.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Resources</p>
+        <p class="prev-next-title">Google Summer of Code</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
