deploy: b827242e6a03a8665c8e9c3ed86ff661d6eced17

--- a/get-involved/gsoc/guidelines.html
+++ b/get-involved/gsoc/guidelines.html
@@ -670,7 +670,7 @@ Please state if you have any other plans for the work period (school work, anoth
 <li><p><strong>GSoC experience.</strong>
 Have you participated in GSoC before? If so, when and with which project? What was your experience like? If you haven’t, what do you expect from the program?</p></li>
 <li><p><strong>Are you also applying to projects with other organisations in GSoC 2025?</strong>
-If so, which ones? How do you plan to manage your time and commitments if you are accepted by multiple organizations? What would be your preference in case of a tie?</p></li>
+If so, which ones? What would be your preference in case of a tie?</p></li>
 </ul>
 </section>
 </section>
