deploy: f5674e6f9472711419aeb8f9f23533b5bfbcd4fb

--- a/get-involved/gsoc/projects_2025/datashuttle.html
+++ b/get-involved/gsoc/projects_2025/datashuttle.html
@@ -65,7 +65,7 @@
     <link rel="author" title="About these documents" href="../../../about.html" />
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
-    <link rel="next" title="GSoC NIU Contributor Application Guidelines" href="../guidelines.html" />
+    <link rel="next" title="GSoC NIU Projects 2025: spikewrap" href="spikewrap.html" />
     <link rel="prev" title="GSoC NIU Projects 2025: BrainGlobe" href="brainglobe.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -662,11 +662,11 @@ Experience with Python</p>
       </div>
     </a>
     <a class="right-next"
-       href="../guidelines.html"
+       href="spikewrap.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">GSoC NIU Contributor Application Guidelines</p>
+        <p class="prev-next-title">GSoC NIU Projects 2025: <code class="docutils literal notranslate"><span class="pre">spikewrap</span></code></p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
@@ -712,7 +712,7 @@ Experience with Python</p>
     <div class="footer-items__start">
       
         <div class="footer-item"><p class="sphinx-version">
-    Created using <a href="https://sphinx-doc.org/">Sphinx</a> 8.2.1.
+    Created using <a href="https://sphinx-doc.org/">Sphinx</a> 8.1.3.
     <br/>
     </p>
     <p class="theme-version">
