--- a/get-involved/gsoc/guidelines.html
+++ b/get-involved/gsoc/guidelines.html
@@ -66,7 +66,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Resources" href="../../resources.html" />
-    <link rel="prev" title="GSoC NIU Projects 2025: datashuttle" href="projects_2025/datashuttle.html" /> 
+    <link rel="prev" title="GSoC NIU Projects 2025: spikewrap" href="projects_2025/spikewrap.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />   
@@ -715,12 +715,12 @@ If so, which ones? What would be your preference in case of a tie?</p></li>
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="projects_2025/datashuttle.html"
+       href="projects_2025/spikewrap.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">GSoC NIU Projects 2025: <code class="docutils literal notranslate"><span class="pre">datashuttle</span></code></p>
+        <p class="prev-next-title">GSoC NIU Projects 2025: <code class="docutils literal notranslate"><span class="pre">spikewrap</span></code></p>
       </div>
     </a>
     <a class="right-next"
@@ -795,7 +795,7 @@ If so, which ones? What would be your preference in case of a tie?</p></li>
     <div class="footer-items__start">
       
         <div class="footer-item"><p class="sphinx-version">
-    Created using <a href="https://sphinx-doc.org/">Sphinx</a> 8.2.1.
+    Created using <a href="https://sphinx-doc.org/">Sphinx</a> 8.1.3.
     <br/>
     </p>
     <p class="theme-version">
