deploy: 9831e027982df5814bf15fc85c73894ca3942712

--- a/projects.html
+++ b/projects.html
@@ -701,7 +701,7 @@ It also allows these folders to be easily synchronised between computers.</p>
 Projects built using this template contain pre-set configurations for code quality checks, formatting,
 automated testing (pytest, both locally and through GitHub Actions), versioning and release on PyPI.</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference external" href="https://github.com/neuroinformatics-unit/python-cookiecutter"><span>https://github.com/neuroinformatics-unit/python-cookiecutter</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://python-cookiecutter.neuroinformatics.dev"><span>https://python-cookiecutter.neuroinformatics.dev</span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
