--- a/blog.html
+++ b/blog.html
@@ -219,6 +219,13 @@
   </a>
 </li>
 
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="open-software-week/index.html">
+    Open Software Week
+  </a>
+</li>
+
                 </ul>
             </li>
             
@@ -409,6 +416,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="open-software-week/index.html">
+    Open Software Week
   </a>
 </li>
 
