--- a/get-involved/gsoc/projects_2025/datashuttle.html
+++ b/get-involved/gsoc/projects_2025/datashuttle.html
@@ -215,6 +215,13 @@
   </a>
 </li>
 
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="../../../open-software-week/index.html">
+    Open Software Week
+  </a>
+</li>
+
                 </ul>
             </li>
             
@@ -407,6 +414,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../../../resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="../../../open-software-week/index.html">
+    Open Software Week
   </a>
 </li>
 
