--- a/resources.html
+++ b/resources.html
@@ -65,6 +65,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
+    <link rel="next" title="Open Software Week" href="open-software-week/index.html" />
     <link rel="prev" title="GSoC NIU Contributor Application Guidelines" href="get-involved/gsoc/guidelines.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -211,6 +212,13 @@
 <li class=" current active">
   <a class="nav-link dropdown-item nav-internal" href="#">
     Resources
+  </a>
+</li>
+
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="open-software-week/index.html">
+    Open Software Week
   </a>
 </li>
 
@@ -409,6 +417,13 @@
   </a>
 </li>
 
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="open-software-week/index.html">
+    Open Software Week
+  </a>
+</li>
+
   </ul>
 </nav></div>
           
@@ -593,6 +608,15 @@ HowTo’s</div>
         <p class="prev-next-subtitle">previous</p>
         <p class="prev-next-title">GSoC NIU Contributor Application Guidelines</p>
       </div>
+    </a>
+    <a class="right-next"
+       href="open-software-week/index.html"
+       title="next page">
+      <div class="prev-next-info">
+        <p class="prev-next-subtitle">next</p>
+        <p class="prev-next-title">Open Software Week</p>
+      </div>
+      <i class="fa-solid fa-angle-right"></i>
     </a>
 </div>
                 </footer>
