--- a/search.html
+++ b/search.html
@@ -214,6 +214,13 @@
   </a>
 </li>
 
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="open-software-week/index.html">
+    Open Software Week
+  </a>
+</li>
+
                 </ul>
             </li>
             
@@ -404,6 +411,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="open-software-week/index.html">
+    Open Software Week
   </a>
 </li>
 
