deploy: 3a09ce1822e8833b8c7f8f9489d104a864087ade

--- a/open-software-week/index.html
+++ b/open-software-week/index.html
@@ -606,7 +606,7 @@ and analyse animal motion from video footage.</p>
 <img alt="" class="sd-card-img-top" src="../_images/brainglobe-card.png" />
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
-<span class="fas fa-video sd-text-warning"></span> BrainGlobe</div>
+<span class="fas fa-brain sd-text-warning"></span> BrainGlobe</div>
 <p class="sd-card-text">Use the BrainGlobe ecosystem of computational neuroanatomy tools
 to analyse whole-brain microscopy datasets.</p>
 </div>
