deploy: 888e64921ea0e9dcf044346030bb369287ca5d32

--- a/about.html
+++ b/about.html
@@ -178,8 +178,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -215,6 +215,13 @@
 <li class=" ">
   <a class="nav-link dropdown-item nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -387,8 +394,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -417,6 +424,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
