--- a/blog.html
+++ b/blog.html
@@ -182,8 +182,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -219,6 +219,13 @@
 <li class=" ">
   <a class="nav-link dropdown-item nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -389,8 +396,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -419,6 +426,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
