--- a/genindex.html
+++ b/genindex.html
@@ -175,8 +175,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -212,6 +212,13 @@
 <li class=" ">
   <a class="nav-link dropdown-item nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -382,8 +389,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -412,6 +419,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
