--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Collaborations" href="collaborations.html" />
+    <link rel="next" title="Publications &amp; Media" href="publications.html" />
     <link rel="prev" title="People" href="people.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -178,8 +178,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -215,6 +215,13 @@
 <li class=" ">
   <a class="nav-link dropdown-item nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -387,8 +394,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -417,6 +424,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="resources.html">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -758,11 +772,11 @@ workflows for common tasks such as linting, testing, and releasing Python projec
       </div>
     </a>
     <a class="right-next"
-       href="collaborations.html"
+       href="publications.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Collaborations</p>
+        <p class="prev-next-title">Publications &amp; Media</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
