--- a/resources.html
+++ b/resources.html
@@ -65,7 +65,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Open Software Week" href="open-software-week/index.html" />
+    <link rel="next" title="Collaborations" href="collaborations.html" />
     <link rel="prev" title="GSoC NIU Contributor Application Guidelines" href="get-involved/gsoc/guidelines.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -178,8 +178,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -215,6 +215,13 @@
 <li class=" current active">
   <a class="nav-link dropdown-item nav-internal" href="#">
     Resources
+  </a>
+</li>
+
+
+<li class=" ">
+  <a class="nav-link dropdown-item nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -387,8 +394,8 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="collaborations.html">
-    Collaborations
+  <a class="nav-link nav-internal" href="publications.html">
+    Publications & Media
   </a>
 </li>
 
@@ -417,6 +424,13 @@
 <li class="nav-item current active">
   <a class="nav-link nav-internal" href="#">
     Resources
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="collaborations.html">
+    Collaborations
   </a>
 </li>
 
@@ -613,11 +627,11 @@ HowTo’s</div>
       </div>
     </a>
     <a class="right-next"
-       href="open-software-week/index.html"
+       href="collaborations.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Open Software Week</p>
+        <p class="prev-next-title">Collaborations</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
