deploy: 176cbaf71867128ac28bd6b7ee28f2842a864ed2

--- a/publications.html
+++ b/publications.html
@@ -665,6 +665,15 @@
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
 <div class="sd-card-body docutils">
 <div class="sd-card-title sd-font-weight-bold docutils">
+Aligning spikes to histology with BrainGlobe</div>
+<p class="sd-card-text">Alessandro Felder, UCL Neuropixels course, October 2025</p>
+</div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://youtu.be/yER8ynNdJcE?si=9_9eTJv--0GZMntn"><span>https://youtu.be/yER8ynNdJcE?si=9_9eTJv–0GZMntn</span></a></div>
+</div>
+<div class="sd-col sd-d-flex-row docutils">
+<div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover docutils">
+<div class="sd-card-body docutils">
+<div class="sd-card-title sd-font-weight-bold docutils">
 movement: A Python toolbox for analysing animal body movements</div>
 <p class="sd-card-text">Niko Sirmpilatze, ABIDE seminar, February 2025</p>
 </div>
