deploy: 7f7aacf06786fef33d5e71b713245fdd013c86ae

--- a/projects.html
+++ b/projects.html
@@ -210,7 +210,7 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="resources.html">
+  <a class="nav-link dropdown-item nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
@@ -426,7 +426,7 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="resources.html">
+  <a class="nav-link nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
@@ -631,7 +631,7 @@ behaviour. There is not yet a standardised, easy to use way to process the pose 
 visualisation and motion quantification. We aim to support a range of pose estimation packages, along with 2D or 3D
 tracking of single or multiple animals.</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference external" href="https://movement.neuroinformatics.dev/"><span>https://movement.neuroinformatics.dev/</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://movement.neuroinformatics.dev/latest/"><span>https://movement.neuroinformatics.dev/latest/</span></a></div>
 </div>
 </div>
 </div>
