--- a/genindex.html
+++ b/genindex.html
@@ -207,7 +207,7 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="resources.html">
+  <a class="nav-link dropdown-item nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
@@ -421,7 +421,7 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="resources.html">
+  <a class="nav-link nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
