--- a/gsoc-2025-datashuttle.html
+++ b/gsoc-2025-datashuttle.html
@@ -209,7 +209,7 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="resources.html">
+  <a class="nav-link dropdown-item nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
@@ -425,7 +425,7 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="resources.html">
+  <a class="nav-link nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
