--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="resources.html">
+  <a class="nav-link dropdown-item nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
@@ -427,7 +427,7 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="resources.html">
+  <a class="nav-link nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
