--- a/search.html
+++ b/search.html
@@ -209,7 +209,7 @@
 
 
 <li class=" ">
-  <a class="nav-link dropdown-item nav-internal" href="resources.html">
+  <a class="nav-link dropdown-item nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
@@ -423,7 +423,7 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="resources.html">
+  <a class="nav-link nav-internal" href="resources/index.html">
     Resources
   </a>
 </li>
