deploy: b182fc57f5ab02f575805da78407bee0fa1a856c

--- a/gsoc-2025-datashuttle.html
+++ b/gsoc-2025-datashuttle.html
@@ -65,7 +65,7 @@
     <link rel="author" title="About these documents" href="about.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="prev" title="Track: Big Imaging Data" href="open-software-summer-school/2025/big-imaging-data.html" /> 
+    <link rel="prev" title="Track: BrainGlobe" href="open-software-summer-school/2026/brainglobe.html" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />   
@@ -601,12 +601,12 @@
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="open-software-summer-school/2025/big-imaging-data.html"
+       href="open-software-summer-school/2026/brainglobe.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Track: Big Imaging Data</p>
+        <p class="prev-next-title">Track: BrainGlobe</p>
       </div>
     </a>
 </div>
