deploy: 16fce8f3e2efb3e537b9d76c8c7f15efcd427537

--- a/projects.html
+++ b/projects.html
@@ -612,7 +612,7 @@ tracking of single or multiple animals.</p>
 <span class="fas fa-otter sd-text-primary"></span> ethology</div>
 <p class="sd-card-text">ethology is a Python package which aims to facilitate the application of a wide range of computer vision tasks to animal behaviour research, by providing a unified data analysis interface. We plan to support both classic computer vision tasks and deep learning based ones, such as background subtraction, object detection, ID tracking, segmentation, any-point tracking, and any useful combinations between them.</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference external" href="https://github.com/neuroinformatics-unit/ethology"><span>https://github.com/neuroinformatics-unit/ethology</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://ethology.neuroinformatics.dev/latest"><span>https://ethology.neuroinformatics.dev/latest</span></a></div>
 </div>
 </div>
 </div>
@@ -649,7 +649,7 @@ test different pipeline configurations.</p>
 <p class="sd-card-text">photon-mosaic simplifies the analysis of multi-photon calcium imaging data by integrating algorithms from tools like Suite2p and CaImAn into a modular pipeline. Researchers can evaluate, compare, and combine methods for each processing step, such as registration or source extraction, and explore metrics to identify the best fit for their datasets.</p>
 <p class="sd-card-text">With support for local or cluster-based parallelization, photon-mosaic provides visualization tools, reports, and guides to streamline decision-making and enhance reproducibility.</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference external" href="https://github.com/neuroinformatics-unit/photon-mosaic"><span>https://github.com/neuroinformatics-unit/photon-mosaic</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://photon-mosaic.neuroinformatics.dev/"><span>https://photon-mosaic.neuroinformatics.dev/</span></a></div>
 </div>
 </div>
 </div>
@@ -662,7 +662,7 @@ test different pipeline configurations.</p>
 <span class="fas fa-stroopwafel sd-text-primary"></span> derotation</div>
 <p class="sd-card-text">A python library to solve sample-rotation artifacts in multiphoton imaging data acquired with a line scanning microscope.</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference external" href="https://github.com/neuroinformatics-unit/derotation"><span>https://github.com/neuroinformatics-unit/derotation</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference external" href="https://derotation.neuroinformatics.dev"><span>https://derotation.neuroinformatics.dev</span></a></div>
 </div>
 </div>
 </div>
